# staticstep

./: Cargo.toml  README.md
benches/: step_by_comparison.rs
ci/: run_linux_and_mac.sh  run_windows.bat
examples/: main_example.rs
src/: lib.rs  utils.rs
tests/: test_staticstep.rs
