[package]
name = "staticstep"
description = "Provides `inc_by()` and `dec_by()` (similar to `step_by()` but actually designed to optimize well for numeric ranges) for all instances of `RangeBounds<T: Copy + Default + Steps>`."
repository = "https://github.com/slightlyoutofphase/staticstep"
documentation = "https://docs.rs/staticstep/"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
keywords = ["iterator", "iterators", "step", "range", "ranges"]
categories = ["data-structures", "algorithms"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[dependencies]
