[package]
name = "staticstep"
description = "Provides truly zero-cost alternatives to `Iterator::step_by` for both incrementing and decrementing any type that satisfies `RangeBounds<T: Copy + Default + Step>`."
repository = "https://github.com/slightlyoutofphase/staticstep"
documentation = "https://docs.rs/staticstep/"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.2.0"
keywords = ["iterator", "iterators", "step", "range", "ranges"]
categories = ["data-structures", "algorithms"]
edition = "2018"
include = ["Cargo.toml", "rustfmt.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges.maintenance]
status = "actively-developed"

[badges.appveyor]
repository = "slightlyoutofphase/staticstep"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[dependencies]
